--- a/ete-project/Bronze Notebook.ipynb
+++ b/ete-project/Bronze Notebook.ipynb
@@ -11,14 +11,16 @@
      },
      "inputWidgets": {},
      "nuid": "ff56962a-17f9-4769-ba71-311678d879a7",
-     "showTitle": false,
+     "showTitle": true,
      "tableResultSettingsMap": {},
-     "title": ""
+     "title": "Cell 1"
     }
    },
    "outputs": [],
    "source": [
-    "dbutils.widgets.text('folder_name','')"
+    "dbutils.widgets.text('folder_name','')\n",
+    "dbutils.widgets.text('source_sub_folder','')\n",
+    "dbutils.widgets.text('target_sub_folder','')"
    ]
   },
   {
@@ -39,7 +41,9 @@
    },
    "outputs": [],
    "source": [
-    "var1 = dbutils.widgets.get('folder_name')"
+    "var1 = dbutils.widgets.get('folder_name')\n",
+    "sub_folder = dbutils.widgets.get('source_sub_folder')\n",
+    "target_sub_folder = dbutils.widgets.get('target_sub_folder')"
    ]
   },
   {
@@ -60,10 +64,11 @@
    },
    "outputs": [],
    "source": [
-    "orders_df = spark.readStream.format('cloudFiles') \\\n",
+    "df = spark.readStream.format('cloudFiles') \\\n",
     "                .option('cloudFiles.format', 'parquet') \\\n",
-    "                .option('cloudFiles.schemaLocation', f'abfss://bronze@azadlsgen7428.dfs.core.windows.net/checkpoint_{var1}') \\\n",
-    "                .load(f'abfss://source@azadlsgen7428.dfs.core.windows.net/{var1}')"
+    "                .option('cloudFiles.schemaLocation', f'abfss://sales@adls7428.dfs.core.windows.net/{sub_folder}/checkpoint_{var1}') \\\n",
+    "                .load(f'abfss://sales@adls7428.dfs.core.windows.net/{sub_folder}/{var1}')\n",
+    "df.display()"
    ]
   },
   {
@@ -84,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "orders_df.writeStream.format('parquet').outputMode('append').option('checkpointLocation', f'abfss://bronze@azadlsgen7428.dfs.core.windows.net/checkpoint_{var1}').option('path', f'abfss://bronze@azadlsgen7428.dfs.core.windows.net/{var1}').trigger(once=True).start()"
+    "df.writeStream.format('parquet').outputMode('append').option('checkpointLocation', f'abfss://sales@adls7428.dfs.core.windows.net/{target_sub_folder}/checkpoint_{var1}').option('path', f'abfss://sales@adls7428.dfs.core.windows.net/{target_sub_folder}/{var1}').trigger(once=True).start()"
    ]
   }
  ],
@@ -125,6 +130,58 @@
       "options": {
        "widgetType": "text",
        "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "source_sub_folder": {
+     "currentValue": "source",
+     "nuid": "61b62a4c-05e2-48ac-9b19-adafeaa67fc9",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "source_sub_folder",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "source_sub_folder",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "target_sub_folder": {
+     "currentValue": "bronze",
+     "nuid": "1f3388a5-080d-4e8a-8828-93aa5bfcd506",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "target_sub_folder",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "target_sub_folder",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
        "validationRegex": null
       }
      }
