--- a/ete-project/Gold_customers.ipynb
+++ b/ete-project/Gold_customers.ipynb
@@ -40,17 +40,15 @@
    },
    "outputs": [],
    "source": [
-    "initial_load_flag = int(dbutils.widgets.get(\"initial_load_flag\"))"
+    "dbutils.widgets.text(\"initial_load_flag\",\"\")\n",
+    "initial_load_flag = dbutils.widgets.get(\"initial_load_flag\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "ab155de8-6345-4a80-bb3f-0f048946a53c",
      "showTitle": false,
@@ -80,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.sql(\"select * from `ete-project`.silver.customers\")\n",
+    "df = spark.sql(\"select * from ete_project.silver.customers\")\n",
     "df.display()"
    ]
   },
@@ -88,10 +86,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "f92ede55-668a-41d1-ae1f-b2249cdbf0cb",
      "showTitle": false,
@@ -115,7 +110,14 @@
      "inputWidgets": {},
      "nuid": "14ab525a-9eef-4a13-ad85-408ed85fb3e7",
      "showTitle": false,
-     "tableResultSettingsMap": {},
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514072208}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
      "title": ""
     }
    },
@@ -129,10 +131,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a292be39-8d7c-4c91-8fac-2f06a95b70c1",
      "showTitle": false,
@@ -162,20 +161,48 @@
    },
    "outputs": [],
    "source": [
-    "if initial_load_flag == 0:\n",
-    "  df_old = spark.sql(\"select dimcustomerkey,customer_id,create_date,update_date from `ete-project`.gold.Dimcustomers\")\n",
+    "if initial_load_flag == 1:\n",
+    "  df_old = spark.sql(\"select dimcustomerkey,customer_id,create_date,update_date from ete_project.gold.Dimcustomers\")\n",
     "else:\n",
-    "  df_old = spark.sql(\"select 0 dimcustomerkey, 0 customer_id, 0 create_date, 0 update_date from `ete-project`.silver.customers where 1=0\")"
+    "  df_old = spark.sql(\"select 0 dimcustomerkey,customer_id, 0 create_date, 0 update_date from ete_project.silver.customers where 1=0\")\n",
+    "df_old.display()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "inputWidgets": {},
+     "nuid": "c0e18ccd-73e1-4c74-ac1e-079519fd538e",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514739608}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_join = df.join(df_old,df.customer_id == df_old.customer_id,'left')\n",
+    "df_join.display()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b8da0d4a-8622-4d39-8a33-de0d22c104a7",
      "showTitle": false,
@@ -199,33 +226,9 @@
      "inputWidgets": {},
      "nuid": "c6af0cd6-e579-4bdb-80de-6c256b4fd634",
      "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_old = df_old.withColumnRenamed('dimcustomerkey','old_dimcustomerkey') \\\n",
-    "                .withColumnRenamed('customer_id','old_customer_id') \\\n",
-    "                .withColumnRenamed('create_date','old_create_date') \\\n",
-    "                .withColumnRenamed('update_date','old_update_date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "22d23e28-f798-4322-8dce-961acc0b190c",
-     "showTitle": false,
      "tableResultSettingsMap": {
       "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1755972090598}",
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1770514056435}",
        "filterBlob": null,
        "queryPlanFiltersBlob": null,
        "tableResultIndex": 0
@@ -236,6 +239,10 @@
    },
    "outputs": [],
    "source": [
+    "df_old = df_old.withColumnRenamed('dimcustomerkey','old_dimcustomerkey') \\\n",
+    "                .withColumnRenamed('customer_id','old_customer_id') \\\n",
+    "                .withColumnRenamed('create_date','old_create_date') \\\n",
+    "                .withColumnRenamed('update_date','old_update_date')\n",
     "df_old.display()"
    ]
   },
@@ -243,10 +250,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "9f6bce03-45df-45ec-a79c-9f901aba3e7c",
      "showTitle": false,
@@ -284,10 +288,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7723d359-9f51-4c32-a958-617eb9909457",
      "showTitle": false,
@@ -300,62 +301,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c0e18ccd-73e1-4c74-ac1e-079519fd538e",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_join = df.join(df_old,df.customer_id == df_old.old_customer_id,'left')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "075a51c7-0964-4bbe-a14c-2abb2c3aaa65",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1755971980583}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_join.display()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "d4d56aa8-94dd-4d91-9d18-8abfcbdefab0",
      "showTitle": false,
@@ -387,39 +336,15 @@
    "source": [
     "df_new = df_join.filter(df_join.old_dimcustomerkey.isNull())\n",
     "df_old = df_join.filter(df_join.old_dimcustomerkey.isNotNull())\n",
+    "df_old.display()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "0193e697-31a8-46c3-a2df-3323a7aec47d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "df_old.display()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "69fe8a62-d5d7-4a83-9840-3f5c7937cb35",
      "showTitle": false,
@@ -463,6 +388,7 @@
     "\n",
     "#recreating \"update_date\" column with current date\n",
     "df_old = df_old.withColumn('update_date',current_timestamp())\n",
+    "df_old.display()\n",
     "\n"
    ]
   },
@@ -491,10 +417,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e57fbec0-5f45-4288-9538-0b66b7e2a64a",
      "showTitle": false,
@@ -592,10 +515,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "81a41246-a924-4369-9c9a-bb434db30f3f",
      "showTitle": false,
@@ -640,10 +560,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c4d24b62-5d92-4d83-b5db-7e4e5e53ad25",
      "showTitle": false,
@@ -730,10 +647,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "e4e6b0c8-0447-4a38-a1b8-1a66a8ff0b2e",
      "showTitle": false,
@@ -798,10 +712,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5299001d-d1e5-4b8b-b60f-821dbc79e3bd",
      "showTitle": false,
@@ -919,7 +830,7 @@
      "typedWidgetInfo": {
       "autoCreated": false,
       "defaultValue": "",
-      "label": "",
+      "label": null,
       "name": "initial_load_flag",
       "options": {
        "widgetDisplayType": "Text",
@@ -930,11 +841,11 @@
      "widgetInfo": {
       "widgetType": "text",
       "defaultValue": "",
-      "label": "",
+      "label": null,
       "name": "initial_load_flag",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
