--- a/ete-project/Lookup.ipynb
+++ b/ete-project/Lookup.ipynb
@@ -17,14 +17,25 @@
    "source": [
     "array = [\n",
     "    {\n",
-    "        \"folder_name\":'orders'\n",
+    "        \"folder_name\":\"orders\",\n",
+    "        \"source_sub_folder\":\"source\",\n",
+    "        \"target_sub_folder\":\"bronze\"\n",
     "    },\n",
     "    {\n",
-    "        \"folder_name\":'customers'\n",
+    "        \"folder_name\":\"customers\",\n",
+    "        \"source_sub_folder\":\"source\",\n",
+    "        \"target_sub_folder\":\"bronze\"\n",
     "    },\n",
     "    {\n",
-    "        \"folder_name\":'products'\n",
-    "    }\n",
+    "        \"folder_name\":\"products\",\n",
+    "        \"source_sub_folder\":\"source\",\n",
+    "        \"target_sub_folder\":\"bronze\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"folder_name\":\"regions\",\n",
+    "        \"source_sub_folder\":\"source\",\n",
+    "        \"target_sub_folder\":\"bronze\"\n",
+    "    },\n",
     "]"
    ]
   },
