--- a/ete-project/Silver_Customers.ipynb
+++ b/ete-project/Silver_Customers.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "from pyspark.sql.functions import *\n",
     "from pyspark.sql.types import *\n",
-    "import time"
+    "import time\n"
    ]
   },
   {
@@ -41,27 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.format('parquet').load('abfss://bronze@azadlsgen7428.dfs.core.windows.net/customers')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6ed908d8-2ea1-480c-8c9f-821886ef9d80",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "df = spark.read.format('parquet').load('abfss://sales@adls7428.dfs.core.windows.net/bronze/customers')\n",
     "df.display()"
    ]
   },
@@ -181,108 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "df.write.format('delta').mode('overwrite').save('abfss://silver@azadlsgen7428.dfs.core.windows.net/customers')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "78e57c77-ff75-475c-b8eb-32681e68f899",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create schema `ete-project`.silver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a9a6d462-0532-46f1-92be-5193b349b76b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create table if not exists `ete-project`.silver.customers\n",
-    "using delta\n",
-    "location 'abfss://silver@azadlsgen7428.dfs.core.windows.net/customers'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e1e316af-333d-4ace-8e39-04708f635b1f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "select * from `ete-project`.silver.customers;\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "420ed845-c914-4c00-9b38-e63eb79f1e4f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create table if not exists `ete-project`.silver.customers\n",
-    "using delta\n",
-    "location 'abfss://silver@azadlsgen7428.dfs.core.windows.net/customers'"
+    "df.write.format('delta').mode('append').option('path','abfss://sales@adls7428.dfs.core.windows.net/silver/customers').saveAsTable('ete_project.silver.customers')"
    ]
   }
  ],
