--- a/ete-project/Silver_Region.ipynb
+++ b/ete-project/Silver_Region.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a2ec13c1-0d28-4dd5-a40b-801b032a45e0",
+     "nuid": "201e6751-6bb5-4e25-913d-981ddd4d2321",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -18,49 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.table('`ete-project`.bronze.regions')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7d414e5f-1d9e-4f48-bf44-0a39a1757251",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    "df = spark.read.format('parquet').load('abfss://sales@adls7428.dfs.core.windows.net/bronze/regions')\n",
     "df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5297c5a8-1a7a-420d-8740-0c04485f326f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = df.drop('_rescued_data')"
    ]
   },
   {
@@ -81,33 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "df.write.format('delta').mode('overwrite').option('path','abfss://silver@azadlsgen7428.dfs.core.windows.net/regions').save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "aed8f792-d867-42b4-aff1-5f19127d0c5c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create table if not exists `ete-project`.silver.region\n",
-    "using delta\n",
-    "location  'abfss://silver@azadlsgen7428.dfs.core.windows.net/regions'"
+    "df.write.format('delta').mode('append').option('path','abfss://sales@adls7428.dfs.core.windows.net/silver/regions').saveAsTable('ete_project.silver.regions')"
    ]
   }
  ],
