--- a/ete-project/Silver_orders.ipynb
+++ b/ete-project/Silver_orders.ipynb
@@ -10,112 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a7d3362d-9e4c-4f4c-a3ea-b35cb7f66deb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders_df = spark.read.format('parquet').load('abfss://bronze@azadlsgen7428.dfs.core.windows.net/orders')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "eafabf71-7466-4293-b7f2-a68477b7bae0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders_df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "38507592-0889-4a95-8cd1-53a55cdf43fe",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders_df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a9541a20-fff7-457f-bc41-79f05137125a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = orders_df.withColumnRenamed('_rescued_data','rescued_data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d9cd4bcd-93cc-4f09-b38b-9137bfba96cd",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "778c40d9-57cd-4496-b43f-66872f5ee494",
+     "nuid": "08e4ffe6-f1be-4912-8a90-553378f21dd7",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -125,7 +20,29 @@
    "source": [
     "from pyspark.sql.functions import *\n",
     "from pyspark.sql.types import *\n",
-    "from pyspark.sql.window import Window\n"
+    "from pyspark.sql.window import Window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a7d3362d-9e4c-4f4c-a3ea-b35cb7f66deb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.read.format('parquet').load('abfss://sales@adls7428.dfs.core.windows.net/bronze/orders')\n",
+    "df.display()"
    ]
   },
   {
@@ -322,33 +239,7 @@
    },
    "outputs": [],
    "source": [
-    "df.write.format('delta').mode('overwrite').save('abfss://silver@azadlsgen7428.dfs.core.windows.net/orders')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cac8c480-17ca-4eaa-9da4-80918df03d16",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create table if not exists `ete-project`.silver.orders\n",
-    "using delta\n",
-    "location 'abfss://silver@azadlsgen7428.dfs.core.windows.net/orders'\n"
+    "df.write.format('delta').mode('append').option('path','abfss://sales@adls7428.dfs.core.windows.net/silver/orders').saveAsTable('ete_project.silver.orders')"
    ]
   }
  ],
