--- a/ete-project/Silver_products.ipynb
+++ b/ete-project/Silver_products.ipynb
@@ -40,28 +40,8 @@
    },
    "outputs": [],
    "source": [
-    "products_df = spark.read.format('parquet').load('abfss://bronze@azadlsgen7428.dfs.core.windows.net/products')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "974208d5-76b9-4acc-ac30-e9b690713e0d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "products_df.display()"
+    "df = spark.read.format('parquet').load('abfss://sales@adls7428.dfs.core.windows.net/bronze/products')\n",
+    "df.display()"
    ]
   },
   {
@@ -82,7 +62,7 @@
    },
    "outputs": [],
    "source": [
-    "products_df.createOrReplaceTempView('products')"
+    "df.createOrReplaceTempView('products')"
    ]
   },
   {
@@ -129,7 +109,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "create or replace function `ete-project`.bronze.discount_func(p_price double)\n",
+    "create or replace function ete_project.silver.discount_func(p_price double)\n",
     "returns double\n",
     "language sql\n",
     "return p_price*0.90"
@@ -163,7 +143,7 @@
    "source": [
     "%sql\n",
     "\n",
-    "select product_id,price,`ete-project`.bronze.discount_func(price) as discounted_price from products;"
+    "select product_id,price,ete_project.silver.discount_func(price) as discounted_price from products;"
    ]
   },
   {
@@ -184,7 +164,7 @@
    },
    "outputs": [],
    "source": [
-    "df = products_df.withColumn('discounted_price',expr('`ete-project` .bronze.discount_func(price)'))"
+    "df = df.withColumn('discounted_price',expr('ete_project.silver.discount_func(price)'))"
    ]
   },
   {
@@ -228,7 +208,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "create or replace function `ete-project`.bronze.upper_funcs(p_brand string)\n",
+    "create or replace function ete_project.silver.upper_funcs(p_brand string)\n",
     "returns string\n",
     "language python\n",
     "as \n",
@@ -257,7 +237,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select product_id,brand,`ete-project`.bronze.upper_funcs(brand) as upper_brand from products"
+    "select product_id,brand,ete_project.bronze.upper_funcs(brand) as upper_brand from products"
    ]
   },
   {
@@ -278,33 +258,7 @@
    },
    "outputs": [],
    "source": [
-    "df.write.format('delta').mode('overwrite').option('path','abfss://silver@azadlsgen7428.dfs.core.windows.net/products').save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ba55e253-55e7-4b45-b99f-23a29aa117a3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "create table if not exists `ete-project`.silver.products\n",
-    "using delta\n",
-    "location 'abfss://silver@azadlsgen7428.dfs.core.windows.net/products'"
+    "df.write.format('delta').mode('append').option('path','abfss://sales@adls7428.dfs.core.windows.net/silver/products').saveAsTable('ete_project.silver.products')"
    ]
   }
  ],
@@ -320,7 +274,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4703492410559974,
+     "commandId": 8470114582909897,
      "dataframes": [
       "_sqldf"
      ]
